finish style for footer

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-*{
-    font: roboto;
-    
+body{
+    margin: 0%;
 }
 
 header{
@@ -14,7 +13,6 @@ header{
 #header-logo{
     font-size: 24px;
     color: #F9FAF8;
-    
 }
 
 .header-link{
@@ -99,10 +97,10 @@ li{
 }
 
 .learn-more-section{
-background-color: white;
-display: flex;
-justify-content: center;
-padding: 75px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    padding: 75px;
 }
 
 .blue-box{
@@ -122,4 +120,10 @@ padding: 75px;
 }
 #learn-more-text{
     margin: 25px;
+}
+
+footer{
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
 }
